修复 Android 平板翻译并精简权限